--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "^1.0.4",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "mysql2": "^2.3.3",
     "node": "^18.5.0",
     "nodemon": "^2.0.19"
   },
