--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-async-errors": "^3.1.1",
     "mysql2": "^2.3.3",
     "node": "^18.5.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sinon-chai": "^3.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
