--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha unity/**/*.test.js",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test:nyc": "nyc --all --include models --include services --include controllers mocha unity/**/*.test.js"
+    "test:nyc": "nyc --all --include models --include services --include controllers mocha unity/**/*.test.js",
+    "restore": "node ./utils/restoreBD.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
+    "mysql-import": "^5.0.21",
     "nyc": "^15.1.0",
     "sinon": "^14.0.0"
   }
