--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "mysql2": "^2.3.3",
     "node": "^18.5.0",
     "nodemon": "^2.0.19",
-    "sinon-chai": "^3.7.0"
+    "sinon-chai": "^3.7.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "mysql-import": "^5.0.21",
